# calculadora-maluca

./: README.md  pyproject.toml  run.py
src/calculators/: calculator_1.py  calculator_1_test.py  calculator_2.py  calculator_2_test.py  calculator_3.py  calculator_3_test.py  calculator_mock_request.py
src/drivers/: numpy_handler.py
src/drivers/interfaces/: driver_handler_interface.py
src/main/factories/: calculator1_factory.py  calculator2_factory.py  calculator3_factory.py
src/main/routes/: calculators.py
src/main/server/: server.py
