[tool.poetry]
name = "calculadora-maluca"
version = "0.1.0"
description = ""
authors = ["Jotape <jotapee@hotmail>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
pytest = "^8.3.4"
numpy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
run_test = "pytest -v"